test/files/neg/sammy_error_exist_no_crash.check
sammy_error_exist_no_crash.scala:5: error: value tryParseInt is not a member of String
  bar(_.tryParseInt)
        ^
1 error
